<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/booking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/bookingStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/spacer_dashboard"
            android:fontFamily="@font/poppins_bold"
            android:padding="5dp"
            android:paddingStart="10dp"
            android:text="@string/bookingStatusPending"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearBookingNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bookingStatus">

            <TextView
                android:id="@+id/labelBookingNumber"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_light"
                android:text="@string/labelBookingNumber"
                android:textColor="@color/blueText"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/valueOfBookingNumber"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_light"
                android:text="@string/pendingBookingNumber"
                android:textColor="@color/lighterBlack"
                android:textSize="14sp"
                app:layout_constraintRight_toRightOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearCustomerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearBookingNumber">

            <TextView
                android:id="@+id/labelCustomerName"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_light"
                android:text="@string/labelCustomerName"
                android:textAlignment="textStart"
                android:textColor="@color/blueText"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/valueOfCustomerName"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_light"
                android:text="@string/pendingCustomerName"
                android:textColor="@color/lighterBlack"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearBookingDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearCustomerName">

            <TextView
                android:id="@+id/labelBookingDate"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_light"
                android:text="@string/labelBookingDate"
                android:textAlignment="textStart"
                android:textColor="@color/blueText"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/valueOfBookingDate"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_light"
                android:text="@string/pendingBookingDate"
                android:textColor="@color/lighterBlack"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearBookingTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/linearBookingDate">

            <TextView
                android:id="@+id/labelBookingTime"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_light"
                android:text="@string/labelBookingTime"
                android:textAlignment="textStart"
                android:textColor="@color/blueText"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/valueOfBookingTime"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_light"
                android:text="@string/pendingBookingTime"
                android:textColor="@color/lighterBlack"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearNoOfGuests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearBookingTime">

            <TextView
                android:id="@+id/labelNoOfGuests"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_light"
                android:text="@string/labelNoOfGuests"
                android:textAlignment="textStart"
                android:textColor="@color/blueText"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/valueOfNumberOfGuests"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_light"
                android:text="@string/pendingNumberOfGuests"
                android:textColor="@color/lighterBlack"
                android:textSize="14sp"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>