<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLabelForPast6Week"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <!--BOOKING NOs.-->
        <TextView
            android:id="@+id/labelBookingNo"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/bookingNo"
            android:textColor="@color/blueText"
            android:textSize="14sp" />
        <!--CUSTOMER NAMEs-->
        <TextView
            android:id="@+id/labelCustomerName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/customerName"
            android:textAlignment="textStart"
            android:textColor="@color/blueText"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearPastWeekBookingDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtPastWeekBookingNumber"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/booking3"
            android:textColor="@color/blueText"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txtPastWeekCustomerName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/davidLicauco"
            android:textAlignment="textStart"
            android:textColor="@color/blueText"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>