<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_box_rounded_corner">

    <TextView
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/labelPassword"
        android:textAlignment="center"
        android:textColor="@color/darkBlue"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/constraintPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textviewCurrent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:text="@string/labelCurrentPassword"
                android:textColor="@color/lighterBlack"
                android:textSize="15sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutCurrentPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/blue"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextCurrentPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@color/transparent"
                    android:inputType="textPassword"
                    android:fontFamily="@font/poppins_light"
                    android:ems="10"
                    android:hint="@string/labelTypeCurrentPassword"
                    android:paddingTop="15dp"
                    android:textColor="@color/lighterBlack"
                    android:textSize="15sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textviewNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:text="@string/labelNewPassword"
                android:textColor="@color/lighterBlack"
                android:textSize="15sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/blue"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@color/transparent"
                    android:inputType="textPassword"
                    android:fontFamily="@font/poppins_light"
                    android:ems="10"
                    android:hint="@string/labelTypeNewPassword"
                    android:paddingTop="15dp"
                    android:textColor="@color/lighterBlack"
                    android:textSize="15sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textviewRetype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:text="@string/labelRetypePassword"
                android:textColor="@color/lighterBlack"
                android:textSize="15sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutRetypePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/blue"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextRetypePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@color/transparent"
                    android:inputType="textPassword"
                    android:fontFamily="@font/poppins_light"
                    android:ems="10"
                    android:hint="@string/labelRetypeYourPassword"
                    android:paddingTop="15dp"
                    android:textColor="@color/lighterBlack"
                    android:textSize="15sp"/>
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonSave"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/blue"
                    android:fontFamily="@font/poppins_medium"
                    android:letterSpacing="0"
                    android:padding="10dp"
                    android:text="@string/labelSave"
                    android:textAllCaps="false"
                    android:textColor="@color/light"
                    android:textSize="15sp"
                    app:cornerRadius="50dp"
                    app:rippleColor="@color/light" />

                <Button
                    android:id="@+id/buttonCancel"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/light"
                    android:fontFamily="@font/poppins_medium"
                    android:letterSpacing="0"
                    android:padding="10dp"
                    android:text="@string/labelCancel"
                    android:textAllCaps="false"
                    android:textColor="@color/blue"
                    android:textSize="15sp"
                    app:cornerRadius="50dp"
                    app:rippleColor="@color/blue"
                    app:strokeColor="@color/blue"
                    app:strokeWidth="1dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>