<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_box_rounded_corner">

    <TextView
        android:id="@+id/editPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/labelPhoneNumber"
        android:textAlignment="center"
        android:textColor="@color/darkBlue"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/linearPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:ems="15"
            android:maxLines="1"
            android:fontFamily="@font/poppins_light"
            android:inputType="phone|number"
            android:paddingTop="20dp"
            android:text="@string/establishmentPhoneNumber"
            android:textColor="@color/lighterBlack"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/blue"
                android:fontFamily="@font/poppins_medium"
                android:letterSpacing="0"
                android:padding="10dp"
                android:text="@string/labelSave"
                android:textAllCaps="false"
                android:textColor="@color/light"
                android:textSize="15sp"
                app:cornerRadius="50dp"
                app:rippleColor="@color/light" />

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/light"
                android:fontFamily="@font/poppins_medium"
                android:letterSpacing="0"
                android:padding="10dp"
                android:text="@string/labelCancel"
                android:textAllCaps="false"
                android:textColor="@color/blue"
                android:textSize="15sp"
                app:cornerRadius="50dp"
                app:rippleColor="@color/blue"
                app:strokeColor="@color/blue"
                app:strokeWidth="1dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>