<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLabelsPending">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_pending_booking">

            <LinearLayout
                android:id="@+id/linearBookingDetailsPending"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <TextView
                    android:id="@+id/txtPendingBooking"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/booking3"
                    android:textColor="@color/blueText"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txtPendingCustomerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/davidLicauco"
                    android:textAlignment="textStart"
                    android:textColor="@color/blueText"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/txtPendingDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/sampleDate"
                    android:textAlignment="center"
                    android:textColor="@color/blueText"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/acceptBooking"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/acceptBooking"
                android:textAlignment="center"
                android:textColor="@color/blueText"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearBookingDetailsPending" />

            <Button
                android:id="@+id/btnDecline"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/darkerRed"
                android:fontFamily="@font/poppins_bold"
                android:letterSpacing="0"
                android:padding="8dp"
                android:text="@string/btnDecline"
                android:textAllCaps="false"
                android:textColor="@color/light"
                android:textSize="14sp"
                app:cornerRadius="50dp"
                app:layout_constraintEnd_toStartOf="@+id/btnAccept"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/acceptBooking"
                app:rippleColor="@color/light" />

            <Button
                android:id="@+id/btnAccept"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/blueGreenLighter"
                android:fontFamily="@font/poppins_bold"
                android:letterSpacing="0"
                android:padding="8dp"
                android:text="@string/btnConfirm"
                android:textAllCaps="false"
                android:textColor="@color/light"
                android:textSize="14sp"
                app:cornerRadius="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnDecline"
                app:layout_constraintTop_toBottomOf="@+id/acceptBooking"
                app:rippleColor="@color/light" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>